Update debian packaging to work with new MAC allocation code. Also saw issue where `public/uploads` did not exist after install. I couldn't see how it was even added by original rules so added as folder in repo.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmprovision4 (1.1+nureva) UNRELEASED; urgency=medium
+
+  * Implement optional MAC address allocation
+
+ -- Kiley Hykawy <kiley.hykawy@gmail.com>  Mon, 30 Aug 2021 23:50:04 -0600
+
 cmprovision4 (1.0) UNRELEASED; urgency=medium
 
   * Add EEPROM firmware support.
