--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+cmprovision4 (1.3.1+nureva) UNRELEASED; urgency=medium
+
+  * Add script to set assigned MAC address in config.txt (via migrations)
+
+ -- Kiley Hykawy <kiley.hykawy@gmail.com>  Sat, 26 Feb 2022 15:42:00 -0700
+
 cmprovision4 (1.3+nureva) UNRELEASED; urgency=medium
 
   * Implement optional MAC address allocation
 
- -- Kiley Hykawy <kiley.hykawy@gmail.com>  Wed, 02 Feb 2022 23:50:04 -0600
+ -- Kiley Hykawy <kiley.hykawy@gmail.com>  Wed, 02 Feb 2022 23:50:04 -0700
 
 cmprovision4 (1.2) UNRELEASED; urgency=medium
 
