--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cmprovision4 (1.4.2+nureva) UNRELEASED; urgency=medium
+
+  * Implement re-use of assigned MAC addresses when same device (by serial) is
+    re-provisioned.
+
+ -- Kiley Hykawy <kiley.hykawy@gmail.com>  Sun, 15 May 2022 15:50:23 -0600
+
 cmprovision4 (1.4.1+nureva) UNRELEASED; urgency=medium
 
   * Implement query strings for sorting and limiting cms APi routes
