--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmprovision4 (1.4.3+nureva) UNRELEASED; urgency=medium
+
+  * TBD.
+
+ -- Kiley Hykawy <kiley.hykawy@gmail.com>  Tue, 23 May 2023 23:01:45 -0600
+
 cmprovision4 (1.4.2+nureva) UNRELEASED; urgency=medium
 
   * Implement re-use of assigned MAC addresses when same device (by serial) is
