--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cmprovision4 (1.6.4+nureva.2) UNRELEASED; urgency=medium
+
+  * Fix issue where we had mismatched dependencies for csv importer that
+    caused MAC address imports to fail
+
+ -- Kiley Hykawy <kiley.hykawy@gmail.com>  Mon, 17 Jul 2023 23:36:00 -0600
+
 cmprovision4 (1.6.4+nureva.1) UNRELEASED; urgency=medium
 
   * Implement optional MAC address allocation
